openshift/templates/full.yaml
apiVersion: v1
kind: List
items:

- apiVersion: "v1"
  kind: "PersistentVolumeClaim"
  metadata:
    name: "brilview-storage"
  spec:
    accessModes:
      - "ReadWriteOnce"
    resources:
      requests:
        storage: "4Gi"


- apiVersion: v1
  kind: ImageStream
  metadata:
    name: nginx-image

- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: nginx-bc
  spec:
    source:
      type: Binary
      binary:
        asFile: ""
    strategy:
      type: Docker
    output:
      to:
        kind: ImageStreamTag
        name: "nginx-image:latest"

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: nginx-dc
  spec:
    template:
      metadata:
        labels:
          name: nginx
          app: nginx-app
      spec:
        containers:
        - name: nginx-container
          image: "brilview/nginx-image"
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            limits:
              cpu: 800m
              memory: 0.8Gi
            requests:
              cpu: 400m
              memory: 0.4Gi
          volumeMounts:
            - mountPath: "/var/www/html"
              name: "pvol1"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
        volumes:
          - name: "pvol1"
            persistentVolumeClaim:
              claimName: "brilview-storage"
    replicas: 1
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames: [nginx-container]
          from:
            kind: ImageStreamTag
            name: "nginx-image:latest"
    strategy:
      type: Rolling
    revisionHistoryLimit: 2

- apiVersion: v1
  kind: Service
  metadata:
    name: nginx-service
  spec:
    selector:
      app: nginx-app
    ports:
    - name: main-access-port
      port: 8000
      protocol: TCP
      targetPort: 8080


- apiVersion: v1
  kind: ImageStream
  metadata:
    name: client-compiler-image

- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: client-compiler-bc
  spec:
    source:
      type: Binary
      binary:
        asFile: ""
    strategy:
      type: Docker
    output:
      to:
        kind: ImageStreamTag
        name: "client-compiler-image:latest"

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: "client-compiler-dc"
  spec:
    template:
      metadata:
        labels:
          name: "client-compiler"
          app: "client-compiler-app"
      spec:
        containers:
        - name: "client-compiler-container"
          image: "brilview/client-compiler-image"
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1.3Gi
          volumeMounts:
            - mountPath: "/client_files_for_serving"
              name: "pvol1"
        volumes:
          - name: "pvol1"
            persistentVolumeClaim:
              claimName: "brilview-storage"
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames: [client-compiler-container]
          from:
            kind: ImageStreamTag
            name: "client-compiler-image:latest"
    strategy:
      type: Recreate
    revisionHistoryLimit: 2


- apiVersion: v1
  kind: ImageStream
  metadata:
    name: brilview-server-image

- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: brilview-server-bc
  spec:
    source:
      type: Binary
      binary:
        asFile: ""
    strategy:
      type: Docker
    output:
      to:
        kind: ImageStreamTag
        name: "brilview-server-image:latest"

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: brilview-server-dc
  spec:
    template:
      metadata:
        labels:
          name: brilview-server
          app: brilview-server-app
      spec:
        containers:
        - name: brilview-server-container
          image: "brilview/brilview-server-image"
          ports:
          - containerPort: 9000
            protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: 6Gi
            requests:
              cpu: 1.4
              memory: 3.3Gi
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
    replicas: 2
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames: [brilview-server-container]
          from:
            kind: ImageStreamTag
            name: "brilview-server-image:latest"
    strategy:
      type: Rolling
    revisionHistoryLimit: 2

- apiVersion: v1
  kind: Service
  metadata:
    name: "brilview-service"
  spec:
    selector:
      app: brilview-server-app
    ports:
    - name: serverport
      port: 9001
      protocol: TCP
      targetPort: 9000

# autoscaler too slow for brilview-server case. Using replicas.
#
# - apiVersion: extensions/v1beta1
#   kind: HorizontalPodAutoscaler
#   metadata:
#     name: brilview-server-autoscaler
#   spec:
#     scaleRef:
#       kind: DeploymentConfig
#       name: brilview-server-dc
#       apiVersion: v1
#       subresource: scale
#     minReplicas: 1
#     maxReplicas: 2
#     cpuUtilization:
#       targetPercentage: 30
