openshift/templates/brilview.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ImageStream
  metadata: {name: brilview-image}
- apiVersion: v1
  kind: BuildConfig
  metadata: {name: brilview}
  spec: 
    source: 
      type: Binary 
      binary: {asFile: ""} 
    strategy: 
      type: Docker 
    output: 
      to: 
        kind: ImageStreamTag
        name: "brilview-image:latest"
- apiVersion: v1
  kind: DeploymentConfig
  metadata: 
    name: brilview-pod
  spec: 
    template:
      metadata: 
        labels: 
          name: brilview
          app: brilview
      spec:
        containers:
        - name: brilview-container 
          image: "172.30.78.46:5000/test-paaszhen/brilview-image"
          ports:
          - containerPort: 1495 
            protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 8Gi
            requests:
              cpu: 3600m
              memory: 7Gi 
    replicas: 1
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams: 
          automatic: true
          containerNames: [brilview-container] 
          from: 
            kind: ImageStreamTag 
            name: "brilview-image:latest" 
    strategy: 
      type: Rolling
    revisionHistoryLimit: 2 
- apiVersion: v1
  kind: Service
  metadata: {name: brilservice}
  spec:
    selector: {app: brilview}
    ports: [{name: mainport, port: 1496, protocol: TCP, targetPort: 1495}]
- apiVersion: v1
  kind: Route
  metadata: {name: brilroute}
  spec: 
    to: 
      kind: Service
      name: brilservice
    port: 
      targetPort: mainport
